--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -7,13 +7,13 @@ npsc
 	margin:0;
 	padding:0;
 	width:100%;
-	color:#fff;
+	color:rgb(0, 0, 0);
 	font:normal 12px/1.8em Arial,Helvetica,sans-serif;
 }
 html,.main {
 	padding:0;
 	margin:0;
-	background-color:#000000;
+	background-color:#ffffff;
 }
 .clr {
 	clear:both;
@@ -26,11 +26,11 @@ html,.main {
 h1 {
 	margin:0;
 	padding:0;
-	color:#fff;
+	color:rgb(0, 0, 0);
 	font:normal 36px/1.2em Arial,Helvetica,sans-serif;
 }
 h1 a,h1 a:hover {
-	color:#fff;
+	color:rgb(0, 0, 0);
 	text-decoration:none;
 }
 h1 small {
@@ -38,7 +38,7 @@ h1 small {
 }
 h2 {
 	font:bold 24px Arial,Helvetica,sans-serif;
-	color:#fff;
+	color:rgb(0, 0, 0);
 	padding:8px 0;
 	margin:8px 0;
 }
@@ -48,13 +48,14 @@ p {
 	font:normal 12px/1.8em Arial,Helvetica,sans-serif;
 }
 a {
-	color:#fff;
+	color:#000000;
 	text-decoration:none;
 }
 a:hover {
 	text-decoration:underline;
 }
 .lbg {
+	color: #ffffff;
 	padding:4px 12px;
 	background-color:#2475c1;
 }
@@ -115,7 +116,7 @@ a:hover {
 	padding:12px 12px 12px 0;
 	float:right;
 	width:auto;
-    border: 1px solid #1bff00;
+    border: 1px solid #000000;
     background-color: #00000000;
 }
 .menu_nav {
@@ -137,7 +138,7 @@ a:hover {
 	display:block;
 	margin:0;
 	padding:4px 12px;
-	color:#fff;
+	color:rgb(0, 0, 0);
 	text-decoration:none;
 	font-size:14px;
 	font-weight:normal;
@@ -154,7 +155,7 @@ a:hover {
 	padding:32px 0 24px 40px;
 	width:930px;
     background-color: #00000000;
-    border: 1px solid #1bff00;
+    border: 1px solid #000000;
 }
 .content .mainbar {
 	float:left;
@@ -163,7 +164,7 @@ a:hover {
 .content .mainbar img {
 	margin:0 6px 24px;
 	padding:4px;
-	border:1px solid #b6cee6;
+	border:1px solid #000000;
 }
 .content .mainbar img.fl {
 	float:left;
@@ -194,7 +195,7 @@ ul.sb_menu li,ul.ex_menu li {
 	margin:0;
 }
 ul.sb_menu li a,ul.ex_menu li a {
-	color:#fff;
+	color:rgb(0, 0, 0);
 	text-decoration:none;
 	font-weight:normal;
 	margin:0 0 0 -12px;
@@ -215,7 +216,7 @@ ul.ex_menu li a:hover {
 	padding:16px 0 0 0;
 }
 .content .mainbar .comment img.userpic {
-	border:1px solid #dedede;
+	border:1px solid #000000;
 	margin:10px 16px 0 0;
 	padding:0;
 	float:left;
@@ -226,7 +227,7 @@ ul.ex_menu li a:hover {
 }
 .fbg img {
 	padding:4px;
-	border:1px solid #b6cee6;
+	border:1px solid #000000;
 }
 .fbg .col {
 	margin:0;
@@ -277,7 +278,7 @@ ul.fmenu li {
 ul.fmenu li a {
 	text-decoration:none;
 	padding:4px 12px;
-	color:#fff;
+	color:rgb(0, 0, 0);
 }
 ul.fmenu li a:hover,ul.fmenu li.active a {
     text-decoration:none;
@@ -334,46 +335,19 @@ a:active {
 .logoimg{
 	text-align: center;
 	padding: 4px;
-	border: 1px solid #b6cee6
+	border: 1px solid #000000
 }
 
 blockquote {
-    color: #ffffff;
-    border-left: 4px solid #ddd;
+    color: #000000;
+    border-left: 4px solid rgb(148, 1, 1);
     padding-left: 20px;
     margin-left: 0;
     font-size: 14px;
     font-style: italic;
 }
-hr{
-    left:50%;
-    width:8px;height:8px;
-    border:0;
-    border-radius:50%;
-    margin:30px 0 30px -14px;
-    background:#666;
-    display:block;
-    position:relative;
-}
 
-hr::before,hr::after{
-    top:1px;
-    content:"\200B";
-    width:6px;height:6px;
-    border:0;
-    border-radius:50%;
-    background:#999;
-    display:block;
-    position:absolute;
-}
-
-hr::before{
-    left:-10px;
-}
-
-hr::after{
-    right:-10px;
-}
+hr{ height:1px;border:none;border-top:1px dashed #0066CC;} 
 
 p, li {
 	code {
@@ -402,7 +376,7 @@ p, li {
 	line-height: 1.5;
   }
   blockquote {
-	color: #ffffff;
+	color: #ff0000;
 	position: relative;
 	padding: .4em 0 0 2.2em;
 	font-size: .96em;
@@ -423,10 +397,10 @@ p, li {
 	overflow-x: auto;
   }
   tr {
-	border-top: 1px solid #dfe2e5;
+	border-top: 1px solid #000000;
   }
   td, th {
-	border: 1px solid #dfe2e5;
+	border: 1px solid #000000;
 	padding: .6em 1em;
   }
 
@@ -442,3 +416,10 @@ p, li {
   .hzhb{
 	  text-align: center;
   }
+img{
+	border: 1px solid #000000;
+	padding: 4px;
+	background-color: #000000;
+}
+
+
