--- a/templates/includes/footer.ejs
+++ b/templates/includes/footer.ejs
@@ -37,13 +37,21 @@
       <% }) %>
     </ul>
   </div>
+  <div class="article">
+    <h2 class="star">推荐</h2>
+    <a target="_black" href="#"><img src="https://www.shufazi.cn/image.png?fsize=190&font=xjhzhjb.ttf&text=暂无&color=111&vcolor=111&alpha=no " width="230" height="100" /></a>
+    
+  </div>
 </div>
 <div class="clr"></div>
+
 </div>
 </div>
 
 <div class="fbg">
+  
 <div class="fbg_resize">
+  <div id="SOHUCS"></div>
 <div class="col c1">
   <h2><span>核心成员</span></h2>
     <img src="http://q2.qlogo.cn/headimg_dl?dst_uin=2200475850&spec=640" width="56" height="56" />
@@ -73,9 +81,13 @@
 <div class="clr"></div>
 <div class="hzhb">
   <p><%- themeConfig.footerInfo %></p>
-  <a target="_black" href="https://www.20191005.tech/"><img src="<%= themeConfig.domain %>/media/images/logo_b.png" width="88" height="31" alt="image" /></a>
-  <a target="_black" href="https://www.aliyun.com/"><img src="<%= themeConfig.domain %>/media/images/aly.png" width="88" height="31" alt="image" /></a>
-  <a target="_black" href="https://gridea.dev/"><img src="<%= themeConfig.domain %>/media/images/gridea.png" width="88" height="31" alt="image" /></a>
+  <!--zu-->
+  <a target="_black" href="https://www.20191005.tech/"><img src="<%= themeConfig.domain %>/media/images/logo_b.png" width="150" height="50" /></a>
+  <a target="_black" href="https://www.aliyun.com/"><img src="<%= themeConfig.domain %>/media/images/aly.png" width="150" height="50" /></a>
+  <a target="_black" href="https://gridea.dev/"><img src="<%= themeConfig.domain %>/media/images/gridea.png"width="150" height="50" /></a>
+  <a target="_black" href="https://www.shallowdream.cn/"><img src="https://shallowdream.cn/img/avatar.png" width="150" height="50" /></a>
+  <a target="_black" href="https://github.com/npsc-tx/npsc-ui"><img src="<%= themeConfig.domain %>/media/images/img1.png" width="150" height="50" /></a>
+  <!--zu-->
 </div>
 </div>
 </div>
@@ -83,10 +95,11 @@
 <div class="footer">
 <div class="footer_resize">
 <p class="lf">&copy; 2018-2020 北极边界安全 - 全站静态化</p>
-<ul class="fmenu">
-  <li><a href="https://www.shallowdream.cn/">	夜莺</a></li>
-  <li><a href="http://www.0-sec.org/">零组文库</a></li>
-  <li><a href="https://www.qingfengblog.com/">卿枫博客</a></li>
+<ul class="fmenu">           
+  <li><a target="_black" href="https://www.shallowdream.cn/">	夜莺</a target="_black"></li>
+  <li><a target="_black" href="http://www.0-sec.org/">零组文库</a></li>
+  <li><a target="_black" href="https://www.qingfengblog.com/">卿枫博客</a></li>
+  <li><a target="_black" href="https://nsc-mppt.github.io/">Newgen Studio</a></li>
 </ul>
 <div class="clr"></div>
 </div>
