--- a/templates/includes/head.ejs
+++ b/templates/includes/head.ejs
@@ -37,7 +37,11 @@
         s.parentNode.insertBefore(bp, s);
     })();
   </script>
-    
 
-
-
+<script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+<script type="text/javascript">
+window.changyan.api.config({
+appid: 'cyuD285tn',
+conf: 'prod_9d518b98b290c7f5a245dddca3eee4d8'
+});
+</script>
