--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -11,7 +11,7 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <p>本网站使用 npsc - ui v1.0 | 基于 Gridea 所开发的纯黑风格模板</p>
+          <p>本网站使用 npsc - ui v1.0 | 基于 Gridea 所开发的模板</p>
           <img src="<%= themeConfig.domain %>/media/images/logo_b.png" width="287" height="97" alt="image" />
           <img src="<%= themeConfig.domain %>/media/images/img1.png" width="287" height="97" alt="image" />
           <span class="lbg">v1.0</span>
