--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -22,7 +22,7 @@
                   <h3 class="post-subtitle"><%- post.abstract %></h3>
                   <p>
                     <span class="lbg"><%= post.dateFormat %></span>
-                    <a href="<%= post.link %>"><span class="lbg">立即阅读</span></a>
+                    <a target="_black" href="<%= post.link %>"><span class="lbg">立即阅读</span></a>
                   </p>
                 <% }); %>
                 <% if (pagination.prev) { %>
