--- a/templates/includes/head.ejs
+++ b/templates/includes/head.ejs
@@ -12,6 +12,7 @@
   <title><%= siteTitle %></title>
 
   <link href="<%= themeConfig.domain %>/styles/main.css" rel="stylesheet">
+  <script src="https://blog-static.cnblogs.com/files/anbus/prism.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <%if(site.customConfig.ga){%>
   <script async src="https://www.googletagmanager.com/gtag/js?id=<%= site.customConfig.ga %>"></script>
